[gd_scene load_steps=8 format=2]

[ext_resource path="res://Stages/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Stages/MainMenu/UpgradeButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Stages/MainMenu/text_to_play.png" type="Texture" id=3]
[ext_resource path="res://Counter/Counter.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.329877, 1.86607, 1 ),
"update": 0,
"values": [ Color( 0.831373, 0, 0, 0.74902 ), Color( 0.831373, 0.317647, 0, 1 ), Color( 0.831373, 0, 0, 0.752941 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.287175, 1 ),
"update": 0,
"values": [ Color( 0.937255, 1, 0.737255, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1.93187, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.0588235 ), Color( 1, 1, 1, 0.392157 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Upgrades" type="Node2D" parent="."]
editor/display_folded = true
scale = Vector2( 3, 3 )

[node name="Speed" parent="Upgrades" instance=ExtResource( 2 )]
position = Vector2( 68.6694, 60 )

[node name="Cooldown" parent="Upgrades" instance=ExtResource( 2 )]
position = Vector2( 68.6694, 170 )

[node name="Shield" parent="Upgrades" instance=ExtResource( 2 )]
position = Vector2( 358.669, 60 )

[node name="Life" parent="Upgrades" instance=ExtResource( 2 )]
position = Vector2( 358.669, 170 )

[node name="Text" type="Node2D" parent="."]

[node name="Score" type="Sprite" parent="Text"]
position = Vector2( 890, 460 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 7
frame = 4

[node name="Time" type="Sprite" parent="Text"]
position = Vector2( 890, 540 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 7
frame = 5

[node name="Level" type="Sprite" parent="Text"]
position = Vector2( 720, 100 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 7
frame = 3

[node name="ScoreCounter" parent="Text" instance=ExtResource( 4 )]
modulate = Color( 0.27451, 0.47451, 1, 1 )
position = Vector2( 520, 460 )
scale = Vector2( 3, 3 )
value = 100
countToRight = false

[node name="TimeCounter" parent="Text" instance=ExtResource( 4 )]
modulate = Color( 0.27451, 0.47451, 1, 1 )
position = Vector2( 520, 540 )
scale = Vector2( 3, 3 )
value = 100
countToRight = false

[node name="LevelCounter" parent="Text" instance=ExtResource( 4 )]
modulate = Color( 1, 0.584314, 0.270588, 1 )
position = Vector2( 870, 100 )
scale = Vector2( 3, 3 )
value = 1
countToRight = true

[node name="GameOver" type="Sprite" parent="."]
modulate = Color( 0, 0.831373, 0.32549, 1 )
position = Vector2( 640, 270 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 7
frame = 1

[node name="NewRecord" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0.831373, 0, 0, 1 )
position = Vector2( 640, 184 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 7
frame = 6

[node name="Anim" type="AnimationPlayer" parent="NewRecord"]
autoplay = "Idle"
anims/Idle = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 640, 360 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 7

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Hide = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

